src/html/classic/css/gsa-base.css
/*
 * Greenbone Security Assistant
 * $Id$
 * Description: Base HTML stylesheet
 *
 * Authors:
 * Björn Ricks <bjoern.ricks@greenbone.net>
 *
 * Copyright:
 * Copyright (C) 2016 Greenbone Networks GmbH
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 */

/* set default width and height calculation behaviour */

/* border-box: actual width = border + padding + margin */
/*             actual height = border + padding + margin */
/* content-box: actual width = border + padding + margin + width */
/*              actual height = border + padding + margin + height */

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  overflow-y: scroll;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}


/* set element default styles */

body {
  margin: 0px;
  font: small Verdana, sans-serif;
  font-size: 12px;
  color: #1A1A1A;
}

a:link {
  color: blue;
  text-decoration: none;
}

a:hover, a:focus {
  color: blue;
  text-decoration: underline;
}

pre {
  white-space: pre-wrap;
  word-wrap: break-word;
}

img {
  border: 0px;
}

h1 {
  font-size: 20px;
}

h2 {
  font-size: 18px;
}

h3 {
  font-size: 16px;
}

h4 {
  font-size:14px;
  margin-bottom:0px;
}

form {
  font-size: 12px;
}

table {
  font-size: 12px;
  border: 0;
}

p {
  margin: 0 0 10px;
}


/* input elements */

button, input, select, textarea {
  /* use font and line settings from parents not from browser default */
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

label {
  display: inline-block;
  max-width: 100%;
  margin-bottom: 5px;
}

input[type="radio"],
input[type="checkbox"] {
  padding: 0;
  margin: 0px;
  line-height: normal;
}

.radio,
.checkbox {
  position: relative;
  display: block;
  margin-top: 10px;
  margin-bottom: 10px;
}

.radio label,
.checkbox label {
  padding-left: 20px;
  min-height: 20px;
  margin-bottom: 0;
  font-weight: normal;
  cursor: pointer;
}

.radio input[type="radio"],
.radio-inline input[type="radio"],
.checkbox input[type="checkbox"],
.checkbox-inline input[type="checkbox"] {
  position: absolute;
  margin-left: -20px;
}

.radio + .radio,
.checkbox + .checkbox {
  margin-top: -5px;
}

.radio-inline,
.checkbox-inline {
  position: relative;
  display: inline-block;
  padding-left: 20px;
  margin-bottom: 0;
  vertical-align: middle;
  font-weight: normal;
  cursor: pointer;
}

.radio-inline + .radio-inline,
.checkbox-inline + .checkbox-inline {
  margin-top: 0;
  margin-left: 10px;
}

.radio-inline.disabled,
.checkbox-inline.disabled,
input[type="radio"][disabled],
input[type="checkbox"][disabled],
input[type="radio"].disabled,
input[type="checkbox"].disabled,
fieldset[disabled] input[type="radio"],
fieldset[disabled] input[type="checkbox"] {
  cursor: not-allowed;
}

.radio.disabled label,
.checkbox.disabled label,
fieldset[disabled] .radio label,
fieldset[disabled] .checkbox label {
  cursor: not-allowed;
}


/* generic css classes */

.pull-right {
  float: right;
}

.pull-left {
  float: left;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.text-justify {
  text-align: justify;
}

.text-nowrap {
  white-space: nowrap;
}

.footnote {
  font-size:10px;
  color: #787878;
  text-align:left;
}

.footnote a {
  font-size:10px;
  color: #787878;
  text-decoration: none;
}

.footnote a:hover {
  font-size:10px;
  color: #787878;
  text-decoration: underline;
}

.footnote a:focus {
  font-size:10px;
  color: #787878;
  text-decoration: underline;
}

.invisible {
  visibility: hidden !important;
}

.hidden {
  display: none !important;
}


/* grid system */

.container {
  margin-right: auto;
  margin-left: auto;
}

.form-horizontal .form-group::after,
.form-horizontal .form-group::before,
.clearfix:before,
.clearfix:after,
.container:before,
.container:after,
.row:before,
.row:after {
  content: " ";
  display: table;
}

.form-horizontal .form-group::after,
.clearfix:after,
.container:after,
.row:after {
  clear: both;
}

.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10,
.col-11, .col-12 {
  float: left;
  padding-left: 10px;
  padding-right: 10px;
}

.col-12 {
  width: 100%;
}

.col-11 {
  width: 91.66666667%;
}

.col-10 {
  width: 83.33333333%;
}

.col-9 {
  width: 75%;
}

.col-8 {
  width: 66.66666667%;
}

.col-7 {
  width: 58.33333333%;
}

.col-6 {
  width: 50%;
}

.col-5 {
  width: 41.66666667%;
}

.col-4 {
  width: 33.33333333%;
}

.col-3 {
  width: 25%;
}

.col-2 {
  width: 16.66666667%;
}

.col-1 {
  width: 8.33333333%;
}

.offset-11 {
  margin-left: 91.66666667%;
}

.offset-10 {
  margin-left: 83.33333333%;
}

.offset-9 {
  margin-left: 75%
}

.offset-8 {
  margin-left: 66.66666667%;
}

.offset-7 {
  margin-left: 58.33333333%;
}

.offset-6 {
  margin-left: 50%;
}

.offset-5 {
  margin-left: 41.66666667%;
}

.offset-4 {
  margin-left: 33.33333333%;
}

.offset-3 {
  margin-left: 25%;
}

.offset-2 {
  margin-left: 16.66666667%;
}

.offset-1 {
  margin-left: 8.33333333%;
}


/* buttons */

button::-moz-focus-inner,
input::-moz-focus-inner {
  /* fix height difference between a.button and input/button.button */
  border: 0;
  padding: 0;
}

.button {
  display: inline-block;
  padding: 0 15px;
  color: #555;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #bbb;
  cursor: pointer;
  overflow: visible;
}

.button:link {
  text-decoration: none;
  color: #555;
}

.button:hover,
.button:focus {
  border: 1px solid #519032;
  outline: 0;
  text-decoration: none;
  background: #519032;
  font-weight: bold;
  color: #fff
}

.button.disabled, .button[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  filter: alpha(opacity=65);
  -webkit-box-shadow: none;
  box-shadow: none;
}

.button-primary {
  border: 1px solid #519032;
  background-color: #87d050;
  font-weight: bold;
  color: #519032;
}

.button img {
  height: 32px;
  width: 32px;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-right: 10px;
  margin-left: -10px;
  vertical-align: middle;
}

.button-block {
  display: block;
  width: 100%;
}


/* formulars */
.form-inline {
  display: inline-block;
}

.form-inline .form-group {
  display: inline-block;
  margin-bottom: 0;
  vertical-align: middle;
}

.form-inline .form-group + .form-group {
  margin-left: 5px;
}

.form-inline .form-group .control-label {
  margin-right: 5px;
}

.form-inline .form-control,
.form-item .form-control {
  display: inline-block;
  width: auto;
  vertical-align: middle;
}

.form-group {
  margin-bottom: 5px;
}

.form-horizontal .control-label {
  padding-top: 5px;
  margin-bottom: 0;
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
}

.form-control {
  display: block;
  width: 100%;
  height: 22px;
  color: #555;
  background-color: #fff;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  padding: 1px 8px;
}

.form-control[disabled] {
  cursor: not-allowed;
}

.form-control[disabled],
.form-control[readonly] {
  background-color: #eee;
  opacity: 1;
}

textarea.form-control {
  height: auto;
}

.form-horizontal .radio,
.form-horizontal .checkbox,
.form-horizontal .radio-inline,
.form-horizontal .checkbox-inline {
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 5px;
}

.form-item {
  display: inline-block;
  width: auto;
}

.form-item + .form-item {
  margin-left: 10px;
}

.form-item .radio,
.form-item .checkbox,
.form-item .radio-inline,
.form-item .checkbox-inline {
  padding-top: 0;
}

/* vim: set ts=2 sw=2 tw=80: */

